--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "v4",
   "description": "Personal Website V4",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "homepage": "https://Archita93.github.io/portfolio",
+  "author": "Brittany Chiang <brittany.chiang@gmail.com>, Archita Srivastava <srivastavaarchita2001@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/Archita93/portfolio"
   },
   "keywords": [
     "gatsby"
